link to vignette

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,4 +23,4 @@ cond
 is.error(cond)
 ```
 
-See the vignette for additional details.
+See [the vignette](http://krlmlr.github.io/condition/vignettes/condition.html) for additional details.
